# android_sdl2_app

./: .gitignore  LICENSE  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/libsdl/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/sdl2app/src/: main.cpp
app/src/main/res/layout/: activity_sdl2.xml  content_sdl2.xml
app/src/main/res/values/: strings.xml
